# template

./: .ignore  .rustfmt.toml  Cargo.toml  dprint.json  justfile
.github/workflows/: autofix.yml  ci.yml  deny.yml  release.yml  zizmor.yml
